# GitGui

./: CMakeLists.txt  README.md
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/GitInterface/: gitinterface.cpp  gitinterface.h
